just a few issues mainly being alignment however I was able to accept a few decisions I made regarding placments of content

--- a/PiClone.css
+++ b/PiClone.css
@@ -62,8 +62,8 @@ text-align: center;
 }*/
 
 .container{
-  border: 1px solid white;
-  border-radius: 4px;
+  /* border: 1px solid white;
+  border-radius: 16px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
