--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ a:visited{
 #logo{
     align-items: center;
 }
-.Me{
+.Mee{
      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
     
     font-family: "Pixelify Sans", serif;
@@ -41,7 +41,33 @@ a:visited{
     text-shadow: 2px 2px 2px rgb(170, 22, 22);
     width: 800px; 
     height: 800px;
+    flex-direction: row;
+
    
+}
+#me{
+     width: 40px;
+    height: auto;
+    border: 1px solid white;
+    border-radius: 4px; 
+    align-items: start;
+}
+.Me{
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    text-align: right;
+    padding: 10px, 10px, 10px, 10px;
+    border: 1px solid white;
+    border-radius: 4px;
+
+    font-family: Georgia, 'Times New Roman', Times, serif;  
+ 
+ font-family: "Pixelify Sans", serif;
+ font-size: large;
+  color: #fdfcff;
+  text-shadow: 2px 2px 2px rgb(170, 22, 22);
+  background-color: rgb(0, 0, 0);
 }
  #me::hover{
     background-color: #1e1e1e;
@@ -87,6 +113,9 @@ body{
     color: #fdfcff;
     background-color: rgb(0, 0, 0);
     text-shadow: 2px 2px 2px rgb(170, 22, 22);
+    padding: 10px, 10px, 10px, 10px;
+    border: 1px solid white;
+    border-radius: 4px;
 }
 
 .Goals{
@@ -97,6 +126,8 @@ body{
     color: #fdfcff;
     background-color: rgb(0, 0, 0);
     text-shadow: 2px 2px 2px rgb(170, 22, 22);
+    
+    
 }
 .JensenEntertainment{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
@@ -106,6 +137,9 @@ body{
     color: #fdfcff;
     background-color: rgb(0, 0, 0);
     text-shadow: 2px 2px 2px rgb(170, 22, 22);
+    padding: 10px, 10px, 10px, 10px;
+    border: 1px solid white;
+    border-radius: 4px;
 }
 .info{
      text-align: center;
@@ -200,7 +234,7 @@ img{
 
 footer{
     content: ">>";
-   color: #6b04a2;
+   color: #a201f9;
   background-color: black;
     letter-spacing: 2px;
     text-shadow: 2px 2px 2pxz#43ff04;
@@ -208,7 +242,7 @@ footer{
 
 .TheList:hover::before{
   content: ">>";
-  color: rgb(103, 4, 153);
+  color: #a201f9;;
   position: absolute;
   left: -30px;
 }
@@ -234,8 +268,39 @@ footer{
 
     footer{
         background-color: #1e1e1e;
+        color: #a201f9;
     }
 
     .a{
         padding: 2px, 2px, 2px, 2px;
     }
+
+    .About{
+       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+    
+    font-family: "Pixelify Sans", serif;
+    font-size: large;
+    color: #fdfcff;
+    background-color: rgb(0, 0, 0);
+    text-shadow: 2px 2px 2px rgb(170, 22, 22);
+    text-align: end;
+    justify-content: end;
+    align-items: end;
+    border: #fdfcff solid 1px;
+    ;
+    }
+    .myself{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: #fdfcff solid 1px;
+        flex-direction: column;
+    }
+.myName{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+    
+    font-family: "Pixelify Sans", serif;
+    color: #fdfcff;
+    text-shadow: 2px 2px 2px rgb(170, 22, 22);
+    font-size: 3em;
+}
